[package]
name = "UdonDimension"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_pbr",
    "bevy_winit",
    "bevy_text",
    "bevy_ui",
    "bevy_gltf",
    "tonemapping_luts",
    "png",
    "multi-threaded"
] }
winit = { version = "0.29", default-features = false, features = ["x11"] }
bevy_rapier3d = { version = "0.25" }
sdl2 = { version = "0.36", default-features = false, features = ["hidapi"] }
